[package]
name = "dum"
version = "0.1.15"
edition = "2021"
license = "MIT"
description = "An npm scripts runner"
authors = ["EGOIST <0x142857@gmail.com>"]
homepage = "https://github.com/egoist/dum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
dialoguer = "0.9.0"
ansi_term = "0.12.1"
ctrlc = "3.2.1"