[package]
name = "dum"
version = "0.1.19"
edition = "2021"
license = "MIT"
description = "An npm scripts runner"
authors = ["EGOIST <0x142857@gmail.com>"]
homepage = "https://github.com/egoist/dum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
dialoguer = "0.10.1"
ansi_term = "0.12.1"
ctrlc = "3.2.1"
log = "0.4.14"
env_logger = "0.9.0"
path-absolutize = "3.0.11"
anyhow = "1.0.52"
