[package]
name = "dum"
version = "0.1.20"
edition = "2021"
license = "MIT"
description = "An npm scripts runner"
authors = ["EGOIST <0x142857@gmail.com>"]
homepage = "https://github.com/egoist/dum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.136"
dialoguer = "0.11.0"
ansi_term = "0.12.1"
ctrlc = "3.4.5"
log = "0.4.25"
env_logger = "0.11.6"
path-absolutize = "3.1.1"
anyhow = "1.0.95"
shlex = "1.3.0"
